# dida365-openapi

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: publish-testpypi.yml  publish.yml
agents/: openai.yaml
references/: api_summary.md
scripts/: dida365_cli.py
skills/dida365-openapi/: SKILL.md
skills/dida365-openapi/agents/: openai.yaml
skills/dida365-openapi/references/: api_summary.md
src/dida365_openapi/: __init__.py  cli.py
tests/: test_dida365_cli.py
